--- a/chinese/index.html
+++ b/chinese/index.html
@@ -30,7 +30,8 @@
 			<dt>专业技能</dt>
 			<dd>熟练掌握CSS3+HTML5+JS标签语义化编码，可较快完成对静态页面的构建。</dd>
 			<dd>熟练CSS预处理器LESS/SASS，掌握Webpack自动化打包管理工具。</dd>
-			<dd>熟练运用JQuery、Zepto、ArtTemplate、SeaJs等框架，对性能优化、懒加载、无刷新分页有实战经验。</dd>
+			<dd>熟练运用JQuery、Zepto、ArtTemplate、SeaJs等框架。</dd>
+			<dd>对性能优化、SEO优化、轮播图、懒加载、无刷新分页有实战经验。</dd>
 			<dd>熟练运用JQuery、Zepto、ArtTemplate、SeaJs等框架。</dd>
 			<dd>对性能优化、SEO优化、轮播图、懒加载、无刷新分页有实战经验。</dd>
 			<dd>熟练AngularJs，有项目经验。React、Vue有一定的了解，能快速上手。</dd>
