--- a/chinese/index.html
+++ b/chinese/index.html
@@ -41,9 +41,12 @@
 			<dd>
 				<h3>2016年8月至今任职于 上海联璧电子科技有限公司 大数据平台事业部</h3>
 				<ul>
-					<li>负责项目里的难点。</li>
-					<li>负责新员工面试，以及面试题。</li>
-					<li>负责向项目经理及时反馈开发中的情况，并根据实际情况提出改进。</li>
+					<li>负责项目里的难点；</li>
+					<li>负责新员工面试，以及面试题；</li>
+					<li>优化前端体验和页面响应速度，保证兼容性；</li>
+					<li>负责公司业务的手机HTML5以及PC Web前端页面开发；</li>
+					<li>向项目经理及时反馈开发中的情况，并根据实际情况提出改进；</li>
+					<li>与产品经理、后端工程师等岗位紧密合作，高效地完成前端页面，并优化代码并保持良好兼容性；</li>
 				</ul>
 			</dd>
 			<dd>
