--- a/chinese/index.html
+++ b/chinese/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="warp">
-		<header>前端工程师-个人简历<a style="display:none" href="../korean/index.html">한국어</a></header>
+		<header>前端工程师-个人简历<a href="../korean/index.html">한국어</a></header>
 		<div class="info">
 			<h5><span>韩永哲</span></h5>
 			<ol class="clearfix">
