--- a/korean/index.html
+++ b/korean/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="warp">
-		<header>프론트앤드 개발자-한영철<a href="../korean/index.html">中文</a></header>
+		<header>프론트앤드 개발자-한영철<a href="../chinese/index.html">中文</a></header>
 		<div class="info">
 			<h5><span>한영철</span></h5>
 			<ol class="clearfix">
